--- a/index.html
+++ b/index.html
@@ -1132,8 +1132,7 @@ Smartphone Compatible web template" />
         <div class="clearfix"></div>
       </div>
       <div class="copy_right text-center">
-        <p class="float-left">&copy; 2021 Profile of Dainel Zhang</p>
-        <p class="float-right">Design on top of <a href="http://w3layouts.com/" target="_blank">W3layouts.</a></p>
+        <p class="float-left">&copy; 2021 Profile of Daniel Zhang</p>
         <ul class="hero__social">
           <li>
             <a href="https://github.com/lang-sky" rel="noopener" target="_blank" title="GitHub">
